force-app/main/default/objects/Customer__c/validationRules/Validate_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Types</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Type__c), ISPICKVAL(PRIORVALUE(Type__c), &quot;A&quot;)  )</errorConditionFormula>
    <errorMessage>Customer Type &apos;A&apos; cannot be changed.</errorMessage>
</ValidationRule>